--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Fabinho e Vitinho, se estão vendo este site, obrigado pela atenção. Como podem ver o design e a paleta de
                 cores são bem simples. Sinceramente não acho que ainda seja uma boa página para mostrar aos escutadores.
                 Estou aberto a sugestões para melhorias, e ficaria bem feliz em implementá-las. Caso possuam
-                conhecimento de páginas HTML, o <a href="#">repositório que contém este website</a> pode dar uma ideia
+                conhecimento de páginas HTML, o <a href="https://github.com/Giancarl021/Chiclete-Promo">repositório que contém este website</a> pode dar uma ideia
                 do que eu fiz. Se puderem me ajudar com ideias conceituais de interações, animações, paleta de cores,
                 conteúdo, etc, por favor me notifiquem no Telegram. Desde já muito obrigado pela atenção.</p>
         </div>
